# Ryxon

./: CMakeLists.txt  Makefile  Program.cs  README.md  build.bat  build.sh  rx.cpp  rx.csharp  rx.csproj  rx.lnx  rx_linux_arm64  test.rx
examples/: eat.rx  hello.rx  input.rx  math.rx  of.rx
install/: install.cmd  install.sh  uninstall.sh
runner/: README.md
src/: AST.cpp  AST.h  Interpreter.cpp  Interpreter.h  Parser.cpp  Parser.h  Token.cpp  Token.h  Tokenizer.cpp  Tokenizer.h  main.cpp
src/libraries/colors/: ColorLibrary.cpp  ColorLibrary.h
src/libraries/math/: MathLibrary.cpp  MathLibrary.h
src/libraries/system/: SystemLibrary.cpp  SystemLibrary.h
src/libraries/time/: TimeLibrary.cpp  TimeLibrary.h
